cheating debug fixed by locking scroll on game screen, only possible problem could be the sidebar being cut off but that was already a problem to begin with, could make it so it can scale down

--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -1,4 +1,7 @@
 .NavBar-container {
+    position: fixed;
+    top: 0;
+    width: 98%;
     z-index: 40;
     padding: var(--s) var(--m);
     background-color: var(--primary);
