--- a/client/src/components/pages/HowTo.css
+++ b/client/src/components/pages/HowTo.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     padding: 32px 0px;
+    padding-top: 80px;
 }
 
 .HT-shortHorizontalLine{
