--- a/client/src/components/pages/Profile.css
+++ b/client/src/components/pages/Profile.css
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    padding-top: 60px;
 }
 
 .Skeleton-controls > * {
