--- a/client/src/components/pages/SinglePlayer.css
+++ b/client/src/components/pages/SinglePlayer.css
@@ -4,6 +4,7 @@
     height: calc(100vh - 59px);
     margin: 0px;
     display: flex;
+    padding-top: 60px;    
 }
 
 .SinglePlayer-SearchImageContainer {
@@ -40,7 +41,7 @@
 .SinglePlayer-ButtonPanelMove {
     z-index: 11;
     position: absolute;
-    width: 200px;
+    width: 13%;
     height: 168px;
     border-radius: 32px;
     background-color: var(--primary);
